tests/baselines/reference/assignmentCompatability29.errors.txt
tests/cases/compiler/assignmentCompatability29.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type '{ one: 任意[]; }'.
  Types of property 'one' are incompatible.
    Type '数字' is not assignable to type '任意[]'.


==== tests/cases/compiler/assignmentCompatability29.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var aa:{one:any[];};;
        export var __val__aa = aa;
    }
    __test2__.__val__aa = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type '{ one: 任意[]; }'.
!!! error TS2322:   Types of property 'one' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '任意[]'.